--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "ShakerWiki",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
+  "scripts": {/*
     "ng": "ng",
     "start": "node ./bin/www",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "preinstall": "npm install -g angular-cli",
+    "postinstall": "ng build && mv dist/* ."*/
+    "start": "http-server",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor",
     "preinstall": "npm install -g angular-cli",
     "postinstall": "ng build && mv dist/* ."
   },
