--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "morgan": "^1.8.2",
     "rxjs": "^5.4.1",
     "serve-favicon": "^2.4.3",
-    "zone.js": "^0.8.14",
+    "zone.js": "^0.8.14"
+  },
+  "devDependencies": {
     "@angular/cli": "1.2.6",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
@@ -48,10 +50,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-    "mysql": "~2.14.1"
-  },
-  "devDependencies": {
-
+    "typescript": "~2.3.3"
   }
 }
